Adding per version tests: attempt 6